...
  <string name="feature_settings_jellyseerr_account">Jellyseerr account</string>
  <string name="feature_settings_jellyseerr_total_requests">Total requests</string>

  <string name="feature_settings_jellyseerr_joined_on">Joined on %s | User ID: %s</string>

  <!-- AboutSettingsScreen -->
  <string name="feature_settings_about">About</string>
  <string name="feature_settings_about__privacy_policy">Privacy Policy</string>
  <string name="feature_settings_about__privacy_policy_url">https://scenepeek.github.io/privacy-policy</string>

  <string name="feature_settings_about__github">Github</string>
  <string name="feature_settings_about__version">Version %s</string>
  <string name="feature_settings_about__developer_github_url">https://github.com/%s</string>
  <string name="feature_settings_about__repository_url">https://github.com/Divinelink/scenepeek-android</string>
  <string name="feature_settings_about__tmdb_endorsement">This product uses the TMDB API but is not endorsed or certified by TMDB.</string>

  <string name="feature_settings_about__ad_free">Ad Free</string>
  <string name="feature_settings_about__open_source">Open Source</string>
  <string name="feature_settings_about__no_tracker">No Trackers</string>

  <string name="feature_settings_about__source_code">View source code</string>
  <string name="feature_settings_about__developed_by">Developed by </string>

  <!-- DetailPreferencesSettingsScreen -->
  <string name="feature_settings_ratings">Ratings</string>
  <string name="feature_settings_ratings_summary">Choose the rating system you want to use.\nIt will be displayed in the details screen of movies and TV shows.</string>
  <string name="feature_settings_movie_rating_preference">Movies</string>
...
