...

  object Components {

    const val PERSISTENT_SCAFFOLD = "Persistent Scaffold"
    const val MEDIA_LIST_CONTENT = "Media List Content"
    const val MEDIA_GRID_CONTENT = "Media Grid Content - Mode %s"
    const val SCROLLABLE_CONTENT = "Scrollable Content"
    const val PULL_TO_REFRESH = "Pull to refresh"
    const val POSTER_IMAGE = "Poster image"

    object Fab {
      const val DISCOVER = "Discover Floating Action Button"
    }
...
    const val DESTINATION_SERVER_MENU = "Destination Server Dropdown %s"
    const val QUALITY_PROFILE_MENU = "Quality Profile Dropdown %s"
    const val ROOT_FOLDER_MENU = "Root Folder Dropdown %s"
  }

  object Settings {
    const val SCREEN_CONTENT = "Settings Screen Content"

    const val TOP_APP_BAR = "Settings Top App Bar"
    const val NAVIGATION_ICON = "Settings Navigation Icon"

    const val RADIO_BUTTON_SELECT_OPTION = "Settings Radio Button Select Option %s"

    object Account {
      const val LOGIN_BUTTON = "Account Login Button"
      const val LOGOUT_BUTTON = "Account Logout Button"
    }

    object About {
      const val CARD = "Application About Card"
      const val SCROLLABLE_CONTENT = "About Lazy List"
    }

    object Jellyseerr {
      const val INITIAL_CONTENT = "Jellyseerr Initial Content"
      const val LOGGED_IN_CONTENT = "Jellyseerr Logged In Content"
...
