...
    ) {
      item {
        AboutCard(
          modifier = Modifier.padding(MaterialTheme.dimensions.keyline_16),
          name = stringResource(commonRes.string.core_commons_app_name),
          version = buildConfigProvider.versionName.lowercase(),
          github = "Divinelink",
          onNavigate = onNavigate,
        )
      }
      item {
        SettingsExternalLinkItem(
          onNavigate = onNavigate,
...
